feat: create delete account page

--- a/templates/two_factor/core/setup.html
+++ b/templates/two_factor/core/setup.html
@@ -82,7 +82,7 @@
 
             {% if wizard.steps.current == 'welcome' %}
                 <div class="mb-3 form-group">
-                    <label for="backup-otp_token" class="form-label">Backup Token</label>
+                    <label for="backup-otp_token" class="form-label">2FA Doğrulama</label>
 
                     <input type="hidden" name="setup_view-current_step" value="welcome" id="id_setup_view-current_step">
                 </div>
