fix: payment notifications html and encrypt settings

--- a/templates/payment/payment_notification.html
+++ b/templates/payment/payment_notification.html
@@ -52,7 +52,7 @@
                         <div class="mb-4">
                             <h5 class="mb-4">Ödeme Bildirimi Oluştur</h5>
                             <div class="row g-3">
-
+                                <p>Eğer paket onayınızın geciktiğini düşünüyorsanız bildirim oluşturabilirsiniz.</p>
                                 <form method="POST">
                                     {% csrf_token %}
                                     {{ form.as_p }}
