--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -15,7 +15,10 @@
                 <li><a href="{% url 'index' %}#pricing">Fiyatlandirma</a></li>
                 <li><a href="{% url 'index' %}#faq">SSS</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
+
                 {% if user.is_authenticated %}
+                    <li><a href="{% url 'calendar_view' %}">Ajanda</a></li>
+                    <li><a href="{% url 'list_notes' %}">Notlar</a></li>
                     <li class="nav-item"><a href="{% url 'profile' %}">Profil</a></li>
                     <li><a href="{% url 'logout' %}">Cikis</a></li>
                 {% endif %}
