--- a/templates/notes/add_note.html
+++ b/templates/notes/add_note.html
@@ -6,7 +6,7 @@
     <title>{{ index_site_title }} - Ajanda</title>
     <style>
         .form-container {
-            max-width: 1500px;
+
             margin: 0 auto;
             padding: 20px;
             background: #fff;
@@ -59,9 +59,26 @@
             opacity: 1;
             text-align: center;
         }
+
+        #calendar {
+            max-width: 100%;
+            margin: 0 auto;
+        }
+
+        @media (max-width: 768px) {
+            #calendar {
+                max-width: 100%;
+                margin: 0 auto;
+                padding: 0;
+            }
+
+            .fc-toolbar {
+                flex-wrap: wrap;
+                text-align: center;
+            }
+        }
+
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css" rel="stylesheet">
 
 {% endblock %}
 
@@ -79,16 +96,18 @@
                 <div class="col-lg-3 border-end">
                     <div class="p-4">
                         <div class="nav flex-column nav-pills">
-                            <a class="nav-link" href="{% url 'profile' %}"><i class="fas fa-user me-2"></i>Kişisel
-                                Bilgiler</a>
-                            <a class="nav-link active" href="{% url 'profile_security' %}"><i
-                                    class="fas fa-lock me-2"></i>Güvenlik ve Bildirim Ayarları</a>
-                            <a class="nav-link" href="{% url 'profile_membership' %}"><i
-                                    class="fas fa-credit-card me-2"></i>Üyelik Paketi Ayarları</a>
-                            <a class="nav-link " href="{% url 'profile_secretaries' %}"><i
-                                    class="fas fa-chart-line me-2"></i>Sekreter Yönetimi</a>
-                            <a class="nav-link" href="{% url 'profile_activity' %}"><i
-                                    class="fas fa-chart-line me-2"></i>Yapılan İşlemler</a>
+                            <a class="nav-link" href="{% url 'note_dashboard' %}"><i class="fas fa-user me-2"></i>Ana
+                                Menü</a>
+                            <a class="nav-link" href="{% url 'calendar_view' %}"><i
+                                    class="fas fa-lock me-2"></i>Takvim / Etkinlik</a>
+                            <a class="nav-link active" href="{% url 'list_notes' %}"><i
+                                    class="fas fa-credit-card me-2"></i>Takvim / Not</a>
+                            <a class="nav-link " href="{% url 'filter_notes' %}"><i
+                                    class="fas fa-chart-line me-2"></i>Not Ara</a>
+                            <a class="nav-link" href="{% url 'how_to_use' %}"><i
+                                    class="fas fa-chart-line me-2"></i>Nasıl Kullanırım?</a>
+                            <a class="nav-link" href="{% url 'version_info' %}"><i
+                                    class="fas fa-chart-line me-2"></i>Sürüm Notları</a>
                         </div>
                     </div>
                 </div>
@@ -98,8 +117,7 @@
                         <div class="mb-4">
 
                             <div class="row g-3">
-
-                                <div class="form-container mt-4">
+                                <div class="form-container  mt-2">
                                     <h2>Yeni Not Ekle</h2>
                                     <form method="POST">
                                         {% csrf_token %}
