--- a/templates/notes/confirm_delete.html
+++ b/templates/notes/confirm_delete.html
@@ -3,15 +3,16 @@
 
 {% block header %}
 
-    <title>{{ index_site_title }} - Şifre Sıfırlama</title>
+    <title>{{ index_site_title }} - Ajanda</title>
     <style>
         .form-container {
-            max-width: 600px;
+
             margin: 0 auto;
             padding: 20px;
             background: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
         }
 
         .form-container h2 {
@@ -58,6 +59,25 @@
             opacity: 1;
             text-align: center;
         }
+
+        #calendar {
+            max-width: 100%;
+            margin: 0 auto;
+        }
+
+        @media (max-width: 768px) {
+            #calendar {
+                max-width: 100%;
+                margin: 0 auto;
+                padding: 0;
+            }
+
+            .fc-toolbar {
+                flex-wrap: wrap;
+                text-align: center;
+            }
+        }
+
     </style>
 
 {% endblock %}
@@ -66,43 +86,57 @@
     <section id="password-reset" class="section" style="padding-top: 100px; scroll-margin-top: 98px;
     overflow: clip">
 
-    <!-- Section Title -->
-    <div class="container section-title" data-aos="fade-up">
-        <h2>Şifre Sıfırlama</h2>
-
-    </div><!-- End Section Title -->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Ajanda</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'calendar_view' %}">Ajanda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'list_notes' %}">Notlar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'filter_notes' %}">Notlar</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <div class="container" data-aos="fade-up" data-aos-delay="100">
 {% endblock %}
 {% block d_content %}
-    <div class="form-container  mt-5">
-        <h2>Notu Sil</h2>
-        <p>Bu notu silmek istediğinizden emin misiniz?</p>
-        <p><strong>{{ note.title }}</strong> - {{ note.date }}</p>
-        <form method="POST">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-danger">Sil</button>
-            <a href="{% url 'list_notes' %}" class="btn btn-secondary">Vazgeç</a>
-        </form>
+    <div class="card border-0 shadow-sm">
+        <div class="card-body p-0">
+            <div class="row g-0">
+                <!-- Sidebar -->
+                <div class="col-lg-3 border-end">
+                    <div class="p-4">
+                        <div class="nav flex-column nav-pills">
+                            <a class="nav-link active" href="{% url 'note_dashboard' %}"><i class="fas fa-user me-2"></i>Ana
+                                Menü</a>
+                            <a class="nav-link" href="{% url 'calendar_view' %}"><i
+                                    class="fas fa-lock me-2"></i>Takvim / Etkinlik</a>
+                            <a class="nav-link active" href="{% url 'list_notes' %}"><i
+                                    class="fas fa-credit-card me-2"></i>Takvim / Not</a>
+                            <a class="nav-link " href="{% url 'filter_notes' %}"><i
+                                    class="fas fa-chart-line me-2"></i>Not Ara</a>
+                            <a class="nav-link" href="{% url 'how_to_use' %}"><i
+                                    class="fas fa-chart-line me-2"></i>Nasıl Kullanırım?</a>
+                            <a class="nav-link" href="{% url 'version_info' %}"><i
+                                    class="fas fa-chart-line me-2"></i>Sürüm Notları</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-9">
+                    <div class="p-4">
+                        <div class="mb-4">
+
+                            <div class="row g-3">
+                                <div class="form-container  mt-2">
+                                    <h2>Notu Sil</h2>
+                                    <p>Bu notu silmek istediğinizden emin misiniz?</p>
+                                    <p><strong>{{ note.title }}</strong> - {{ note.date }}</p>
+                                    <form method="POST">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-danger">Sil</button>
+                                        <a href="{% url 'list_notes' %}" class="btn btn-secondary">Vazgeç</a>
+                                    </form>
+
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
 
     </div>
